--- a/front/package.json
+++ b/front/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
+    "console-browserify": "^1.2.0",
     "core-js": "^3.8.3",
+    "node-polyfill-webpack-plugin": "^2.0.1",
     "roboto-fontface": "*",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
