--- a/.gitignore
+++ b/.gitignore
@@ -8,10 +8,7 @@ node_modules
 .env.*.local
 
 # Log files
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
+**/*.log*
 
 # Editor directories and files
 .idea
@@ -23,3 +20,4 @@ pnpm-debug.log*
 *.sw?
 front/package-lock.json
 **/*.class
+**/target/*
